syntax = "proto3";
package chess;

// ============================================================================
// Advanced Review Analysis Messages
// ============================================================================

// ============================================================================
// Tactical Tag Model
// ============================================================================

// The kind of tactical pattern detected.
enum TacticalTagKindProto {
  TACTICAL_TAG_KIND_UNSPECIFIED = 0;
  TACTICAL_TAG_KIND_FORK = 1;
  TACTICAL_TAG_KIND_PIN = 2;
  TACTICAL_TAG_KIND_SKEWER = 3;
  TACTICAL_TAG_KIND_DISCOVERED_ATTACK = 4;
  TACTICAL_TAG_KIND_DOUBLE_ATTACK = 5;
  TACTICAL_TAG_KIND_HANGING_PIECE = 6;
  TACTICAL_TAG_KIND_SACRIFICE = 7;
  TACTICAL_TAG_KIND_ZWISCHENZUG = 8;
  TACTICAL_TAG_KIND_BACK_RANK_WEAKNESS = 9;
  TACTICAL_TAG_KIND_MATE_THREAT = 10;
}

// A line of action in a tactical pattern (e.g. pin line, skewer line).
message TacticalLineProto {
  string from = 1;
  repeated string through = 2;
  string to = 3;
}

// Supporting evidence for a detected tactical pattern.
message TacticalEvidenceProto {
  repeated TacticalLineProto lines = 1;
  repeated string threatened_pieces = 2;
  repeated string defended_by = 3;
}

// A detected tactical pattern with confidence and evidence.
message TacticalTagProto {
  TacticalTagKindProto kind = 1;
  optional string attacker = 2;
  repeated string victims = 3;
  optional string target_square = 4;
  float confidence = 5;
  optional string note = 6;
  TacticalEvidenceProto evidence = 7;
}

// King safety metrics for one side.
message KingSafetyMetricsProto {
  string color = 1;
  uint32 pawn_shield_count = 2;
  uint32 pawn_shield_max = 3;
  uint32 open_files_near_king = 4;
  uint32 attacker_count = 5;
  uint32 attack_weight = 6;
  uint32 attacked_king_zone_squares = 7;
  uint32 king_zone_size = 8;
  float exposure_score = 9;
}

// King safety for both sides.
message PositionKingSafetyProto {
  KingSafetyMetricsProto white = 1;
  KingSafetyMetricsProto black = 2;
}

// Position tension and volatility metrics.
message PositionTensionMetricsProto {
  uint32 mutually_attacked_pairs = 1;
  uint32 contested_squares = 2;
  uint32 attacked_but_defended = 3;
  uint32 forcing_moves = 4;
  uint32 checks_available = 5;
  uint32 captures_available = 6;
  float volatility_score = 7;
}

// Advanced analysis for a single position.
message AdvancedPositionAnalysisProto {
  uint32 ply = 1;
  reserved 2, 3;
  reserved "tactics_before", "tactics_after";
  PositionKingSafetyProto king_safety = 4;
  PositionTensionMetricsProto tension = 5;
  bool is_critical = 6;
  optional uint32 deep_depth = 7;
  repeated TacticalTagProto tactical_tags_before = 8;
  repeated TacticalTagProto tactical_tags_after = 9;
}

// Psychological profile for one player.
message PsychologicalProfileProto {
  string color = 1;
  uint32 max_consecutive_errors = 2;
  optional uint32 error_streak_start_ply = 3;
  uint32 favorable_swings = 4;
  uint32 unfavorable_swings = 5;
  uint32 max_momentum_streak = 6;
  uint32 blunder_cluster_density = 7;
  optional uint32 blunder_cluster_range_start = 8;
  optional uint32 blunder_cluster_range_end = 9;
  optional float time_quality_correlation = 10;
  optional uint64 avg_blunder_time_ms = 11;
  optional uint64 avg_good_move_time_ms = 12;
  double opening_avg_cp_loss = 13;
  double middlegame_avg_cp_loss = 14;
  double endgame_avg_cp_loss = 15;
}

// Complete advanced analysis for a game.
message AdvancedGameAnalysisProto {
  string game_id = 1;
  repeated AdvancedPositionAnalysisProto positions = 2;
  PsychologicalProfileProto white_psychology = 3;
  PsychologicalProfileProto black_psychology = 4;
  uint32 pipeline_version = 5;
  uint32 shallow_depth = 6;
  uint32 deep_depth = 7;
  uint32 critical_positions_count = 8;
  uint64 computed_at = 9;
}

// ============================================================================
// Request / Response Messages
// ============================================================================

// Get advanced analysis for a game.
message GetAdvancedAnalysisRequest {
  string game_id = 1;
}

message GetAdvancedAnalysisResponse {
  AdvancedGameAnalysisProto analysis = 1;
}
